--- a/about/Contact Details.html
+++ b/about/Contact Details.html
@@ -4,5 +4,6 @@
 <body>
 <h1>Contact Details</h1>
 <p>Contact me on Discord @ JasonWi11iams#2459</p>
+<button onclick="mailto:wjason494@gmail.com">Email</button>
 </body>
 </html>
