Testing New Details

--- a/about/Contact Details.html
+++ b/about/Contact Details.html
@@ -5,5 +5,9 @@
 <h1>Contact Details</h1>
 <p>Contact me on Discord @ JasonWi11iams#2459</p>
 <button onclick="mailto:wjason494@gmail.com">Email</button>
+<form action="mailto:wjason494@gmail.com">
+    <input type="submit" value="Email" />
+<a href="mailto:wjason494@gmail.com">Send email</a>
+</form>
 </body>
 </html>
