--- a/index.html
+++ b/index.html
@@ -4,6 +4,9 @@
 <body>
 <h1>Hello World</h1>
 <p>I'm hosted with GitHub Pages.</p>
-<a href="/about/Contact Details.html">Contact Details</a>
+<a href="/about/contactdetails.html">Contact Details</a>
+<a href="/games/games.html">Game Development</a>
+<a href="/mods/mods.html">Game Mods</a>
+<a href="/mobile/mobile.html">Android</a>
 </body>
 </html>
