--- a/index.html
+++ b/index.html
@@ -2,8 +2,8 @@
 <html>
 <title>Jason Williams</title>
 <body>
-<h1>Hello World</h1>
-<p>I'm hosted with GitHub Pages.</p>
+<h1>Portfolio</h1>
+<p>Website showcasing all past achievements and future projects</p>
 <a href="/about/contactdetails.html">Contact Details</a>
 <a href="/games/games.html">Game Development</a>
 <a href="/mods/mods.html">Game Mods</a>
