--- a/about/contactdetails.html
+++ b/about/contactdetails.html
@@ -5,8 +5,8 @@
 <h1>Contact Details</h1>
 <p>Contact me on Discord @ JasonWi11iams#2459</p>
 https://discord.com/channels/@me/360188448918863872/
+<p><a href="mailto:wjason494@gmail.com">Send email</a></p>
 <p>
-<a href="mailto:wjason494@gmail.com">Send email</a>
 <a href="../index.html">Home Page</a>
 <a href="/about/contactdetails.html">Contact Details</a>
 <a href="/games/games.html">Game Development</a>
