Updated pages and added links to content

--- a/mobile/mobile.html
+++ b/mobile/mobile.html
@@ -4,6 +4,7 @@
 <body>
 <h1>Android Modding</h1>
 <p>Android mods that I coded as first attempts in coding</p>
+<a href="https://forum.xda-developers.com/t/systemui-mod-for-gt-s5301.3257274/">Samsung Galaxy Pocket Plus SystemUI Mod</a>
 <a href="../index.html">Home Page</a>
 <a href="/about/contactdetails.html">Contact Details</a>
 <a href="/games/games.html">Game Development</a>
