--- a/mods/mods.html
+++ b/mods/mods.html
@@ -4,6 +4,9 @@
 <body>
 <h1>Game Modding</h1>
 <p>Mods that I've made for games</p>
+<h2>Hitman 3</h2>
+<p><a href="">Offline Missions</a>
+<a href="">Custom Missions</a></p>
 <a href="../index.html">Home Page</a>
 <a href="/about/contactdetails.html">Contact Details</a>
 <a href="/games/games.html">Game Development</a>
