--- a/mobile/mobile.html
+++ b/mobile/mobile.html
@@ -1,9 +1,16 @@
 <!DOCTYPE html>
 <html>
 <title>Android Modding</title>
+<head>
+<style>
+img {
+  float: right;
+}
+</style>
+</head>
 <body>
 <h1>Android Modding</h1>
-<p>Android mods that I coded as first attempts in coding</p>
+<p>Android mods that I coded as first attempts in coding</p><img src="Android.svg" alt="Android" style="width:170px;height:170px;margin-left:15px;">
 <p><a href="https://forum.xda-developers.com/t/systemui-mod-for-gt-s5301.3257274/">Samsung Galaxy Pocket Plus SystemUI Mod</a></p>
 <a href="../index.html">Home Page</a>
 <a href="/about/contactdetails.html">Contact Details</a>
