--- a/mobile/mobile.html
+++ b/mobile/mobile.html
@@ -1,4 +1,3 @@
-<!DOCTYPE html>
 <html>
 <title>Android Modding</title>
 <head>
@@ -11,7 +10,7 @@ img {
 <body>
 <h1>Android Modding</h1>
 <p>Android mods that I coded as first attempts in coding</p>
-<img src="/Android.svg" alt="Android" style="width:170px;height:170px;margin-left:15px;">
+<img src="Android.svg" alt="Android" style="width:170px;height:170px;margin-left:15px;">
 <p>
 <a href="https://forum.xda-developers.com/t/systemui-mod-for-gt-s5301.3257274/">Samsung Galaxy Pocket Plus SystemUI Mod</a>
 </p>
