--- a/index.html
+++ b/index.html
@@ -3,6 +3,7 @@
 <title>Jason Williams</title>
 <body>
 <h1>Portfolio</h1>
+<h2>Proof of Concept/Not Final</h2>
 <p>Website showcasing all past achievements and future projects</p>
 <a href="/about/contactdetails.html">Contact Details</a>
 <a href="/games/games.html">Game Development</a>
